Remplacement des getFirst par get(0)